--- a/GE.WebAdmin/Views/BannedUrls/_GridView.cshtml
+++ b/GE.WebAdmin/Views/BannedUrls/_GridView.cshtml
@@ -17,6 +17,7 @@
             CreateRowUrl = "/bannedurls/edit",
             EnableEditing = true,
             EditRowUrl = (x) => { return "/bannedurls/edit/" + x.Id; },
-            DataAjaxUrl = "/bannedurls"
+            DataAjaxUrl = "/bannedurls",
+            ShowPagerInfo=true
         }
     )
