--- a/GE.WebAdmin/Views/BannerGroups/_GridView.cshtml
+++ b/GE.WebAdmin/Views/BannerGroups/_GridView.cshtml
@@ -16,6 +16,7 @@
             CreateRowUrl = "/bannergroups/edit",
             EnableEditing = true,
             EditRowUrl = (x) => { return "/bannergroups/edit/" + x.Id; },
-            DataAjaxUrl = "/bannergroups"
+            DataAjaxUrl = "/bannergroups",
+            ShowPagerInfo=true
         }
     )
