--- a/GE.WebAdmin/Views/Banners/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Banners/_GridView.cshtml
@@ -28,6 +28,7 @@
             CreateRowUrl = "/banners/edit",
             EnableEditing = true,
             EditRowUrl = (x) => { return "/banners/edit/" + x.Id; },
-            DataAjaxUrl = "/banners"
+            DataAjaxUrl = "/banners",
+            ShowPagerInfo=true
         }
     )
