--- a/GE.WebAdmin/Views/Manuals/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Manuals/_GridView.cshtml
@@ -17,7 +17,8 @@
         EnableCreating=true,
         CreateRowUrl= "/manuals/edit",
         EnableEditing=true,
-        EditRowUrl = x => { return "/manuals/edit/" + x.Id; }
+        EditRowUrl = x => { return "/manuals/edit/" + x.Id; },
+        ShowPagerInfo=true
 
     }
  )
