--- a/GE.WebAdmin/Views/Redirects/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Redirects/_GridView.cshtml
@@ -15,6 +15,7 @@
                 CreateRowUrl = "/redirects/edit",
                 EnableEditing = true,
                 EditRowUrl = (x) => { return "/redirects/edit/" + x.Id; },
-                DataAjaxUrl = "/redirects"
+                DataAjaxUrl = "/redirects",
+                ShowPagerInfo=true
             }
     )
