--- a/GE.WebAdmin/Views/SeoTags/_GridView.cshtml
+++ b/GE.WebAdmin/Views/SeoTags/_GridView.cshtml
@@ -14,6 +14,7 @@
             CreateRowUrl = "/seotags/edit",
             EnableEditing = true,
             EditRowUrl = (x) => { return "/seotags/edit/" + x.Id; },
-            DataAjaxUrl = "/seotags"
+            DataAjaxUrl = "/seotags",
+            ShowPagerInfo=true
         }
     )
