--- a/GE.WebAdmin/Views/SiteTests/Index.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/Index.cshtml
@@ -4,7 +4,9 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<br />
+<div class="alert alert-warning">
+    <strong>Внимание!</strong> Алгоритм занесеня тестов в БД на данный момент охватывает все представленные на сайте тесты.<br /> Тип теста необходим только для того, чтобы определить способ прохождения теста. Тип теста задается при создании и не может быть мзмененн при редактировании.<br /> Редактирования типа теста у существующего теста доступно только для роли "architect". Внимательно ознакомьтесь с инструкцией занесения тестов по типам!
+</div>
 <div id="site-tests">
     @Html.Partial("_gridview", Model)
 </div>
