--- a/GE.WebAdmin/Views/Games/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Games/_GridView.cshtml
@@ -16,10 +16,11 @@
             }}
         },
         DataAjaxUrl="/games",
-        RowCssClass = x => { return x.Show ? "success" : null; },
+        RowCssClass = x => { return !x.Show ? "warning" : null; },
         EnableCreating=true,
         CreateRowUrl="/games/edit",
         EnableEditing=true,
-        EditRowUrl = x =>{ return "/games/edit/" + x.Id; }
+        EditRowUrl = x =>{ return "/games/edit/" + x.Id; },
+        ShowPagerInfo=true
     }
     )
