--- a/GE.WebAdmin/Views/SiteTests/Edit.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/Edit.cshtml
@@ -47,13 +47,27 @@
             @Html.HiddenFor(x => x.Id)
 
             <div class="row">
-                <div class="col-md-10">
+                <div class="col-md-@(User.IsInRole("architect")?8:10)">
                     <div class="form-group">
                         @Html.LabelFor(x => x.Title, new { @class = "control-label" })
                         @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(x => x.Title)
                     </div>
                 </div>
+                @if (User.IsInRole("architect"))
+                {
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            @Html.LabelFor(x => x.Type, new { @class = "control-label" })
+                            @Html.EnumDropDownListFor(x => x.Type, new { @class = "form-control"})
+                            @Html.ValidationMessageFor(x => x.Type)
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    @Html.HiddenFor(x=>x.Type)
+                }
                 <div class="col-md-2">
                     <div class="form-group">
                         @Html.LabelFor(x => x.Show, new { @class = "control-label" })
@@ -65,16 +79,16 @@
 
             @if (!isNew && User.IsInRole("architect"))
             {
-            <div class="form-group">
-                @Html.LabelFor(x => x.TitleUrl, new { @class = "control-label" })
-                <span class="text-info"> (применяется для уникальной идентификации материала)</span>
-                @Html.EditorFor(x => x.TitleUrl, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(x => x.TitleUrl)
-            </div>
+                <div class="form-group">
+                    @Html.LabelFor(x => x.TitleUrl, new { @class = "control-label" })
+                    <span class="text-info"> (применяется для уникальной идентификации материала)</span>
+                    @Html.EditorFor(x => x.TitleUrl, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(x => x.TitleUrl)
+                </div>
             }
             else
             {
-                @Html.HiddenFor(x=>x.TitleUrl)
+                @Html.HiddenFor(x => x.TitleUrl)
             }
 
             <div class="form-group">
