--- a/GE.WebAdmin/less/chat.less
+++ b/GE.WebAdmin/less/chat.less
@@ -17,7 +17,22 @@
 
 @w:50px;
 .chat__user{
-    height:@w;
+    min-height:@w;
+    @media (max-width: @screen-xs-max) {
+       
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
 }
 
 .chat__user figure{
