--- a/GE.WebUI/Views/SiteTests/Details.cshtml
+++ b/GE.WebUI/Views/SiteTests/Details.cshtml
@@ -1,9 +1,12 @@
-﻿@model SxVMSiteTestAnswer
+﻿@using SX.WebCore;
+
+@model SxVMSiteTestAnswer
 @{
     ViewBag.Title = Model.Question!=null && Model.Question.Test!=null ? Model.Question.Test.Title : "Страница прохождения теста";
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
     ViewBag.Description = ViewBag.Description ?? Model.Question != null && Model.Question.Test!=null ? Model.Question.Test.Description : "Страница прохождения теста";
     ViewBag.Keywords = ViewBag.Keywords ?? "Игровые тесты, тесты для игр";
+    var testType = Model.Question.Test.Type;
 }
 
 @Html.Partial("_Breadcrumbs", (VMBreadcrumb[])ViewBag.Breadcrumbs)
@@ -11,23 +14,57 @@
 @if (Model.Question != null && Model.Question.Test!=null)
 {
     <div id="st-page">
-        @Html.Partial("_Step", Model)
+        @if (Equals(testType, SxSiteTest.SiteTestType.Guess))
+        {
+            @Html.Partial("_StepGuess", Model)
+        }
+        else if(Equals(testType, SxSiteTest.SiteTestType.Normal))
+        {
+            @Html.Partial("_StepNormal", Model)
+        }
+    </div>
+    <div class="text-center">
+        @Html.SxShareButtons(global_asax.ShareButtons)
     </div>
 
     @section scripts{
         <script src="~/content/dist/js/jquery.unobtrusive-ajax.min.js"></script>
+        <script src="~/content/dist/js/goodshare.min.js"></script>
         <script>
             $(function () {
+                //guess
                 $('#st-page').on('click', '.sx-indicator > span', function () {
                     $span = $(this);
-                    var id = $span.closest('li').find('.sx-indicator-txt').attr('data-id');
-                    var isCorrect = $span.data('dir') == true;
+                    $span.closest('.sx-indicator').prepend('<i class="fa fa-spinner fa-spin"></i>');
+    var id = $span.closest('li').find('.sx-indicator-txt').attr('data-id');
+    var isCorrect = $span.data('dir') == true;
 
                     $form = $span.closest('form');
                     $input = $form.find('input[data-q-id="' + id + '"]')
                     $input.val(isCorrect);
 
                     $form.submit();
+});
+
+                //normal
+                $('#st-page').on('change', '.test-normal-q-list [type="radio"]', function () {
+                    $radio = $(this);
+                    var questionId = $radio.attr('id').replace('q-', '');
+                    $h4 = $('#st-page [data-subject-id]');
+                    $h4.prepend('<i class="fa fa-spinner fa-spin"></i>');
+                    var subjectId = $h4.attr('data-subject-id');
+                    $subject = $('#st-page .s [value="' + subjectId + '"]');
+                    var subjectIndex = $subject.attr('name').replace('.SubjectId', '');
+
+                    $('<input type="hidden" name="' + subjectIndex + '.QuestionId" value="' + questionId + '" />').insertAfter($subject);
+
+                    $form = $radio.closest('form');
+                    $form.submit();
+                });
+
+                $('#st-page').on('click', '.test-normal-q-list__dont-btn', function () {
+                    $h4 = $('#st-page [data-subject-id]');
+                    $h4.prepend('<i class="fa fa-spinner fa-spin"></i>');
                 });
             });
         </script>
