--- a/GE.WebUI/Views/SiteTests/_StepNormal.cshtml
+++ b/GE.WebUI/Views/SiteTests/_StepNormal.cshtml
@@ -3,8 +3,11 @@
     Layout = null;
     var oldSteps = (SxVMSiteTestStep[])ViewBag.OldSteps;
     var allSubjectsCount = Convert.ToInt32(ViewBag.AllSubjectsCount ?? -1);
+    var lettersCount = (int)ViewBag.LettersCount;
     SxVMSiteTestStep step;
 }
+
+@lettersCount
 
 @if (allSubjectsCount > oldSteps.Length || allSubjectsCount==-1)
 {
@@ -14,6 +17,12 @@
         <blockquote>
             @Html.Raw(Model.Question.Test.Description)
         </blockquote>
+
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+                <span class="sr-only">100% Complete</span>
+            </div>
+        </div>
 
         @Html.AntiForgeryToken()
 
@@ -64,3 +73,7 @@ else
     </div>
     <br />
 }
+
+<script>
+    lettersCount=@lettersCount;
+</script>
