--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     ViewBag.Keywords = ViewBag.Keywords ?? gameName;
 }
 
-@Html.Action("LastGamesNewsBlock", new { controller= "News", lnc= 5 })
+@Html.Action("LastGamesNewsBlock", "News", new { lnc= 5 })
 
 @Html.Action("NewsCategories", new { controller = "News", lnc = 5 })
 
