--- a/GE.WebAdmin/Views/Humor/Edit.cshtml
+++ b/GE.WebAdmin/Views/Humor/Edit.cshtml
@@ -1,8 +1,7 @@
-﻿@model VMEditNews
+﻿@model VMEditHumor
 @{
     var isNew = Model.Id == 0;
-    ViewBag.Title = isNew ? "Добавить новость" : "Редактировать новость \"" + Model.Title + "\"";
-    ViewBag.GameTitle = isNew || !Model.GameId.HasValue ? null : Model.Game.Title;
+    ViewBag.Title = isNew ? "Добавить юмор" : "Редактировать юмор \"" + Model.Title + "\"";
     ViewBag.MaterialCategoryTitle = isNew || Model.CategoryId == null ? null : Model.Category.Title;
     var uriFragmet = Request.QueryString.GetValues("fragment") != null ? Request.QueryString.GetValues("fragment")[0] : null;
     var hasError = Convert.ToBoolean(ViewBag.HasError);
@@ -18,7 +17,7 @@
 {
     <div class="form-group">
         <div class="text-right">
-            <form method="post" action="@Url.Action("delete", "news")">
+            <form method="post" action="@Url.Action("Delete", "Humor")">
                 @Html.HiddenFor(x => x.Id)
                 @Html.HiddenFor(x => x.ModelCoreType)
                 @Html.AntiForgeryToken()
@@ -44,7 +43,7 @@
 <div class="tab-content">
     <div role="tabpanel" class="tab-pane @(uriFragmet==null || uriFragmet=="params"? "active":null)" id="params">
         <h2>Основные параметры материала</h2>
-        <form method="post" action="@Url.Action("Edit", "News")">
+        <form method="post" action="@Url.Action("Edit", "Humor")" autocomplete="off">
             @Html.AntiForgeryToken()
 
             @Html.HiddenFor(x => x.Id)
@@ -99,17 +98,12 @@
                 @Html.HiddenFor(x => x.TitleUrl)
             }
             <div class="row">
-                <div class="col-md-3">
-                    @Html.LabelFor(x => x.GameId, new { @class = "control-label" })
-                    @Html.EditorFor(x => x.GameId, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(x => x.GameId)
-                </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     @Html.LabelFor(x => x.CategoryId, new { @class = "control-label" })
                     @Html.EditorFor(x => x.CategoryId, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(x => x.CategoryId)
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     @Html.LabelFor(x => x.FrontPictureId, new { @class = "control-label" })
                     @if (Model.FrontPictureId.HasValue)
                     {
@@ -118,7 +112,7 @@
                     @Html.EditorFor(x => x.FrontPictureId, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(x => x.FrontPictureId)
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     @Html.LabelFor(x => x.ShowFrontPictureOnDetailPage, new { @class = "control-label" })
                     @Html.EditorFor(x => x.ShowFrontPictureOnDetailPage, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(x => x.ShowFrontPictureOnDetailPage)
@@ -128,7 +122,7 @@
             <div class="row">
                 <div class="col-md-12">
                     @Html.LabelFor(x => x.Foreword, new { @class = "control-label" })
-                    @Html.EditorFor(x => x.Foreword, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите начальное описание материала" } })
+                    @Html.EditorFor(x => x.Foreword, new { htmlAttributes = new { @class = "form-control", @placeholder="Введите начальное описание материала" } })
                     @Html.ValidationMessageFor(x => x.Foreword)
                 </div>
             </div>
