--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -44,6 +44,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Развлечения <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="@Url.Action("List", "SiteTests")">Тесты</a></li>
+                        <li><a href="@Url.Action("List", "Humor")">Юмор</a></li>
                     </ul>
                 </li>
             </ul>
